--- a/components/footer.html
+++ b/components/footer.html
@@ -34,7 +34,7 @@ content {
   window.onload = function(){ c.resetFooter() }
   window.onresize = function(){ c.resetFooter() }
 
-  c.newElm()
+  c._NEW_ELM()
 })()
 
 </script>
