--- a/components/id-card.html
+++ b/components/id-card.html
@@ -67,7 +67,7 @@ table {
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
 
-(( c = new Component('id-card-tag') )=>{ c.newElm() })()
+(( c = new Component('id-card-tag') )=>{ c._NEW_ELM() })()
 
 </script>
 <!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / / -->
