--- a/components/login.html
+++ b/components/login.html
@@ -19,7 +19,7 @@ content {
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
 
-(( c = new Component('login-tag') )=>{ c.newElm() })()
+(( c = new Component('login-tag') )=>{ c._NEW_ELM() })()
 
 </script>
 <!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / / -->
