--- a/components/id-card.html
+++ b/components/id-card.html
@@ -36,7 +36,7 @@ table {
 }
 </style>
 <!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
-<content>
+<content if='show'>
   <div class="card">
     <table style="width:100%">
       <tr>
