--- a/components/landing.html
+++ b/components/landing.html
@@ -49,10 +49,10 @@
   <div if='nest.idCards' for='card nest.idCards'>
     <id-card-tag serve="card"></id-card-tag>
   </div>
-  <id-card-tag serve="data.nest.idCards[0]"></id-card-tag>
+  <!-- <id-card-tag serve="data.nest.idCards[0]"></id-card-tag>
   <id-card-tag serve="data.nest.idCards[1]"></id-card-tag>
   <id-card-tag serve="data.nest.idCards[2]"></id-card-tag>
-  <id-card-tag serve="data.nest.idCards[1]"></id-card-tag>
+  <id-card-tag serve="data.nest.idCards[1]"></id-card-tag> -->
 
 </content>
 </template>
