last night was a mess, but wanna keep anything weird that i'm about to remove

--- a/components/data.html
+++ b/components/data.html
@@ -91,8 +91,7 @@ button:hover {
           <td> idCard.last </td>
           <td>
             <p if="idCard.edit"> idCard.edit </p>
-            <!-- <p if="!idCard.edit"> idCard.age </p> -->
-            <!-- <input style='width: 30px;' placeholder="idCard.age"> -->
+            <p if="!idCard.edit"> idCard.age </p>
           </td>
           <td key="i" name="feet"> idCard.feet </td>
           <td key="i" name="inches"> idCard.inches </td>
