--- a/components/id-card.html
+++ b/components/id-card.html
@@ -54,7 +54,7 @@ table {
       </tr>
       <tr>
         <th class='float-left'> Height: </th>
-        <th><div if='feet' class='entry' var='f feet, i inches'/> f- ' i- "</div></th>
+        <th><div if='ft' class='entry' var='f ft, i in'/> f- ' i- "</div></th>
       </tr>
       <tr>
         <th class='float-left'> Home: </th>
