--- a/components/login.html
+++ b/components/login.html
@@ -13,7 +13,7 @@ content {
 <!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
 <content>
   login page goes here
-  <br><button onclick="goBack()" > back </button>
+  <br><button onclick="_GO_BACK()" > back </button>
 </content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
