--- a/components/data.html
+++ b/components/data.html
@@ -100,10 +100,8 @@ button:hover {
     <input class='input1' id='iHome' placeholder="city of residence ..."/> <br>
     <button id='more'> Submit </button>
     <br><br>
-
-    <table if='arr[0] !willPass' if='nest[idCards] nest.idCards[0].name nOT.pASS nest' >
-      <!-- ^^^ use case for if array and placing ifs in row to mimick ORs. remove ! on !willPass and it won't show do to condition... -->
-
+    <table id='table' if='arr[0] !willPass' if='nest[idCards] nest.idCards[0].name nOT.pASS nest' >
+    <!-- ^^^ use case for if array and placing ifs in row to mimick ORs. remove ! on !willPass and it won't show do to condition... -->
       <tr id='labels'>
         <th class="show-col"> Show </th>
         <th class='label-text'> Title </th>
@@ -115,34 +113,34 @@ button:hover {
         <th style='min-width: 200px;'> Residence </th>
       </tr>
       <tbody id='checkBoxes' for='idCard,i nest.idCards'>
-        <tr>
-          <td><input style='margin-left: 15px;' val="show" key="i"
+        <tr key="i" >
+          <td><input style='margin-left: 15px;' key="i" val="show"
               type="checkbox" checked="idCard.show">
           </td>
           <td><p if="!idCard.edit"> idCard.title </p>
-            <input if="idCard.edit" placeholder="idCard.title" val="title">
+            <input if="idCard.edit" placeholder="idCard.title" key="i" val="title">
           </td>
           <td><p if="!idCard.edit"> idCard.name </p>
-            <input if="idCard.edit" placeholder="idCard.name" val="name">
+            <input if="idCard.edit" placeholder="idCard.name" key="i" val="name">
           </td>
           <td><p if="!idCard.edit"> idCard.last </p>
-            <input if="idCard.edit" placeholder="idCard.last" val="last">
+            <input if="idCard.edit" placeholder="idCard.last" key="i" val="last">
           </td>
           <td><p if="!idCard.edit"> idCard.age </p>
-            <input class="input-num" if="idCard.edit" placeholder="idCard.age" val="age">
+            <input class="input-num" if="idCard.edit" placeholder="idCard.age" key="i" val="age">
           </td>
-          <td><p if="!idCard.edit"> idCard.ft- " </p>
-            <input class="input-num" if="idCard.edit" placeholder='idCard.ft' val="ft">
+          <td><p if="!idCard.edit"> idCard.ft- ' </p>
+            <input class="input-num" if="idCard.edit" placeholder='idCard.ft' key="i" val="ft">
           </td>
           <td><p if="!idCard.edit"> idCard.in- " </p>
-            <input class="input-num" if="idCard.edit" placeholder='idCard.in' val="in">
+            <input class="input-num" if="idCard.edit" placeholder='idCard.in' key="i" val="in">
           </td>
           <td><p if="!idCard.edit"> idCard.home </p>
-            <input if="idCard.edit" placeholder="idCard.home" val="home">
+            <input if="idCard.edit" placeholder="idCard.home" key="i" val="home">
           </td>
           <td class='edit-col'>
-            <button if="!idCard.edit" val="edit" key="i" class='eBut'> Edit </button>
-            <button if="idCard.edit" val="edit" key="i" class='eBut eButS'>
+            <button if="!idCard.edit" key="i" val="edit" class='eBut'> Edit </button>
+            <button if="idCard.edit" key="i" val="edit" class='eBut eButS'>
               Submit
             </button>
           </td>
@@ -153,13 +151,13 @@ button:hover {
     <p if='!nest.idCards'> <em> ! No data Avilalbe ! </em><br> Fill out form to add Data  </p>
     <br>
 
-    <!-- <div if='nest.editCard' var='n nest.editCard, x nest.idCards[1], y nest.idCards[1].last, z nest.idCards[1].age'>
+    <div if='nest.editCard' var='n nest.editCard, x nest.idCards[1], y nest.idCards[1].last, z nest.idCards[1].age'>
       <div for='v,k,i nest.editCard'>
         <none indices='s1 e6'>  k- : <strong> v </strong> </none>
         <br indices='2 5'>
       </div>
       <strong>x.name y z n.show</strong>
-    </div> -->
+    </div>
 
   </div>
 </content>
@@ -170,8 +168,8 @@ button:hover {
 (( c = new Component('data-tag') )=>{
 
   c.add = ()=>{
-    data.nest.idCards.push({
-      title: 'ID Card ' + (data.nest.idCards.length+1),
+    _DATA.nest.idCards.push({
+      title: 'ID Card ' + (_DATA.nest.idCards.length+1),
       name: c.I('iName').value,
       last: c.I('iLast').value,
       age: c.I('iAge').value,
@@ -189,27 +187,29 @@ button:hover {
     c.I('iName').focus()
   }
 
-  c._ADD_EVENT('click', 'checkBoxes', ([ key, val ] = c.KV(event))=>{
+  c._ADD_EVENT('click', 'checkBoxes', c.submitEdit = ([ key, val ] = c.KV(event))=>{
+    let state = _DATA.nest.idCards[key][val]
+    if (event.keyCode == 13) {
+      val = "edit"
+      state = 'true'
+    }
     if (val === "edit") {
-      const state = data.nest.idCards[key][val]
       if (state === 'true') {
         const tags = event.path[2].getElementsByTagName('input')
-        for (var i = 0; i < tags.length-1; i++) {
+        for (var i = 0; i < tags.length; i++) {
           const val = tags[i].getAttribute('val')
           if (tags[i].value) {
-            data.nest.idCards[key][val] = tags[i].value
+            _DATA.nest.idCards[key][val] = tags[i].value
           }
         }
       }
-      for (const card of data.nest.idCards) delete(card[val])
-      !state ? data.nest.idCards[key][val] = 'true' : delete(state)
-      data.nest.editCard = data.nest.idCards[key]
-
-
+      for (const card of _DATA.nest.idCards) delete(card[val])
+      !state ? _DATA.nest.idCards[key][val] = 'true' : delete(state)
+      _DATA.nest.editCard = _DATA.nest.idCards[key]
     }
     if (val === "show") {
       const checkBoxStatus = event.path[0].checked === true ? 'true' : 'false'
-      data.nest.idCards[key][val]= checkBoxStatus
+      _DATA.nest.idCards[key][val]= checkBoxStatus
     }
   }, true)
 
@@ -219,6 +219,10 @@ button:hover {
 
   c._ADD_EVENT('keypress', 'iHome', ()=>{
     if (event.keyCode == 13) c.add()
+  }, true)
+
+  c._ADD_EVENT('keypress', 'table', ()=>{
+    if (event.keyCode == 13) c.submitEdit()
   }, true)
 
   c._NEW_ELM()
