--- a/components/example-component.html
+++ b/components/example-component.html
@@ -8,6 +8,9 @@
   <div var='x _data'>
    x.test
   </div>
+  <div for='x array'>
+    <p> x </p>
+  </div>
 </content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
