--- a/components/example-component.html
+++ b/components/example-component.html
@@ -1,16 +1,18 @@
 <template id="example-component">
 <!-- { { { { { { { { { { { { { { { {  CSS  } } } } } } } } } } } } } } } } } -->
 <style>
-
 </style>
 <!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
 <content>
-  <div var='x _data'>
-   x.test
-  </div>
-  <div for='x array'>
-    <p> x </p>
-  </div>
+	<div class="main" var="x _data">
+	  <div>
+	   x.tracks
+	  </div>
+	  <hr>
+	  <div for="{i} feet">
+	    <p>You have ran {i} miles today<span if="weather"> and it was x.weather</span></p>
+	  </div>
+  	</div>
 </content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
