--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 html, body {
-  background-image: url("gfx/texture.png");
+  background-image: url("gfx/stressed-linen.png");
   font-size: 20px;
   font-family: Avenir;
 }
