prematurely styling before i have any valid data

--- a/components/example-component.html
+++ b/components/example-component.html
@@ -5,14 +5,14 @@
 <!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
 <content>
 	<div class="main" var="x _data">
-	  <div>
-	   x.tracks
-	  </div>
-	  <hr>
-	  <div for="{i} feet">
-	    <p>You have ran {i} miles today<span if="weather"> and it was x.weather</span></p>
-	  </div>
-  	</div>
+		<hr style="margin-top:0px;">
+		<div>
+			<p>x.tracks</p>
+		</div>
+		<div for="{i} feet">
+			<p>You have ran {i} miles today<span if="weather"> and it was x.weather</span></p>
+		</div>
+	</div>
 </content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
