--- a/components/navbar.html
+++ b/components/navbar.html
@@ -2,13 +2,15 @@
 <!-- { { { { { { { { { { { { { { { {  CSS  } } } } } } } } } } } } } } } } } -->
 	<style>
 		.nav-content {
+			background-image: url("gfx/maroon-glitter.png");
+			color: #E2C28F;
 			padding: 15px;
 		}
 		.nav-buttons {
 			float: right;
 		}
 		.button {
-			border: 1px solid purple;
+			border: 1px solid maroon;
 			border-radius: 2px;
 			cursor: pointer;
 			font-size: 14px;
@@ -21,7 +23,6 @@
 			<span class="button" onclick="_PAGE_SET('home')">Emily's Run Tracker</span>
 			<span class="nav-buttons"><span class="button" id="button" onclick="_PAGE_SET('route-maps')">Route Maps</span></span>
 		</div>
-		<hr>
 	</content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
