--- a/components/route-maps.html
+++ b/components/route-maps.html
@@ -1,13 +1,13 @@
 <template id="route-maps">
 <!-- { { { { { { { { { { { { { { { {  CSS  } } } } } } } } } } } } } } } } } -->
 <style>
-
 </style>
 <!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
 <content>
- <div class="maps" for="{i} routeMaps.locations">
-	 <p>These are all the maps: {i}</p>
- </div>
+	<hr style="margin-top:0px;">
+	<div class="maps" for="{i} routeMaps.locations">
+		<p>These are all the maps: {i}</p>
+	</div>
 </content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
