fixes htmljs error

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,7 +4,8 @@
 		.nav-content {
 			background-image: url("gfx/maroon-glitter.png");
 			color: #E2C28F;
-			padding: 15px;
+			padding: 30px;
+			margin-top: -20px;
 		}
 		.nav-buttons {
 			float: right;
@@ -14,6 +15,7 @@
 			border-radius: 2px;
 			cursor: pointer;
 			font-size: 14px;
+			font-weight: bold;
 			padding: 5px;
 		}
 	</style>
