saving cards to endpoints

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -25,6 +25,7 @@
 			<span class="button" onclick="_PAGE_SET('home')">Emily's Run Tracker</span>
 			<span class="nav-buttons"><span class="button" id="button" onclick="_PAGE_SET('route-maps')">Route Maps</span></span>
 		</div>
+		<hr style="margin-top:0px;">
 	</content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
